--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3>G3 Architects</h3>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">LogIn</a></li>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
