--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- header start here -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -33,8 +34,28 @@
             <img src="assects/images/banner.png" alt="">
         </div>
     </header>
+    <!-- header end here -->
     <main>
 
+        <!-- team section start here -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="assects/images/team1.png" alt="">
+                <img src="assects/images/team2.png" alt="">
+                <img src="assects/images/team3.png" alt="">
+                <img src="assects/images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-content-title">
+                    <span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-fuatures">Features</span>
+                </h3>
+                <p class="teams-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
