--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1 class="banner-title">
                     Brand New Group of Architects
                 </h1>
-                <p class="banner-description">
+                <p class="text-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
@@ -47,9 +47,9 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-content-title">
-                    <span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-fuatures">Features</span>
+                    <span class="quick-list text-gray">Quick list</span> <span>of Our</span> <span class="text-fuatures">Features</span>
                 </h3>
-                <p class="teams-description">
+                <p class="text-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
