change some common shared style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header start here -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -47,7 +47,8 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-content-title">
-                    <span class="quick-list text-gray">Quick list</span> <span>of Our</span> <span class="text-fuatures">Features</span>
+                    <span class="quick-list text-gray">Quick list</span> <span>of Our</span> <span
+                        class="text-fuatures">Features</span>
                 </h3>
                 <p class="text-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -56,6 +57,23 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- team section end here -->
+        <!-- features section start here -->
+        <section class="features">
+
+        </section>
+        <!-- features section end here -->
+        <!-- fact section start here -->
+        <section class="fact">
+            <h3 class="section-title">
+                Some Facts
+            </h3>
+            <p class="text-gray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
+            </p>
+        </section>
+        <!-- fact section end here -->
     </main>
     <footer>
 
