--- a/index.html
+++ b/index.html
@@ -72,6 +72,28 @@
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration.
             </p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="assects/images/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="assects/images/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-gray">Projext Finished</p>
+                </div>
+                <div class="card">
+                    <img src="assects/images/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="assects/images/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-gray">Email Send</p>
+                </div>
+            </div>
         </section>
         <!-- fact section end here -->
     </main>
