--- a/index.html
+++ b/index.html
@@ -96,6 +96,23 @@
             </div>
         </section>
         <!-- fact section end here -->
+        <!-- sponsors section start here -->
+        <section class="sponsors">
+            <h3 class="section-title">
+                Our Sponsors
+            </h3>
+            <p class="text-gray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
+            </p>
+            <div class="sponsors-img-container">
+                <img src="assects/images/sponsors/spotify.png" alt="">
+                <img src="assects/images/sponsors/amazon.png" alt="">
+                <img src="assects/images/sponsors/telerama.png" alt="">
+                <img src="assects/images/sponsors/google.png" alt="">
+                <img src="assects/images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
