--- a/index.html
+++ b/index.html
@@ -60,7 +60,50 @@
         <!-- team section end here -->
         <!-- features section start here -->
         <section class="features">
-
+            <div class="features-content">
+                <h3 class="section-title">
+                    Features you will<br>love & enjoy
+                </h3>
+                <p class="text-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="text-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="assects/images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ Years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- features section end here -->
         <!-- fact section start here -->
@@ -113,10 +156,13 @@
                 <img src="assects/images/sponsors/figma.png" alt="">
             </div>
         </section>
+        <!-- sponsors section end here -->
     </main>
+    <!-- footer section start here -->
     <footer>
 
     </footer>
+    <!-- footer section end here -->
 </body>
 
 </html>
