--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
         <!-- sponsors section end here -->
     </main>
     <!-- footer section start here -->
-    <footer>
-
+    <footer class="footer">
+        <p class="copy-right-section text-gray">
+            All rights reserved copyright@2023 startup landing page design
+        </p>
     </footer>
     <!-- footer section end here -->
 </body>
